updated libro page

--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -218,6 +218,10 @@
 					{
 						<app-add-libro-form class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-add-libro-form>
 					}
+					@case(6)
+					{
+						<app-log-form class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-log-form>
+					}
 					@default 
 					{
 						<div class="flex h-full w-full items-center justify-center border-2 border-dashed border-border bg-gray-1">La opción seleccionada no es valida o no está implementada.</div>
