--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -21,7 +21,7 @@
 								alt="avatar icon" />
 						</label>
 						<p class="username-text" tabindex="0">
-							Hola, {{userData.username}}!
+							Hola, {{userData?.username}}!
 						</p>
 					</div>
 					<div class="dropdown-menu dropdown-menu-bottom-left">
