Temporal storage, backend responses rework, error class

--- a/src/app/components/admin/tables/books/book-table/book-table.component.html
+++ b/src/app/components/admin/tables/books/book-table/book-table.component.html
@@ -39,7 +39,7 @@
                 }
                 <td>{{item.Price}}</td>
                 <td><button class="btn btn-outline-error">Delete</button></td>
-                <td><button class="btn btn-outline-success">Edit</button></td>
+                <td><button class="btn btn-outline-success" (click)="onEditFunc(item);">Edit</button></td>
             </tr>
             }
             }
