--- a/src/app/components/credit-card/credit-card.component.html
+++ b/src/app/components/credit-card/credit-card.component.html
@@ -2,7 +2,7 @@
     <div class="logoContainer">
         @if(cardIssuer)
         {
-            <img [src]="cardIssuer?.logo" [alt]="cardIssuer?.name" class="card-logo">
+            <img [src]="cardIssuer.logo" [alt]="cardIssuer.name" class="card-logo">
         }
         @else
         {
