--- a/src/app/components/admin/forms/add-libro-form/add-libro-form.component.html
+++ b/src/app/components/admin/forms/add-libro-form/add-libro-form.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-grow w-full h-full flex-row flex-wrap overflow-scroll">
-    <app-book-table class="size-max flex-grow basis-full" [header]="table_Header" [body]="table_Body" #tableRef></app-book-table>
+    <app-book-table class="size-max flex-grow basis-full" [header]="table_Header" [body]="table_Body" (onEdit)="onEditClick($event);" #tableRef></app-book-table>
 
     <div class="pagination align-bottom items-end justify-center object-bottom flex-grow mb-2.5">
         <button class="btn">
@@ -17,5 +17,5 @@
         </button>
     </div>
 
-    <app-book-popup></app-book-popup>
+    <app-book-popup #popupRef></app-book-popup>
 </div>
