--- a/src/app/components/child_components/carousel-book-item/carousel-book-item.component.html
+++ b/src/app/components/child_components/carousel-book-item/carousel-book-item.component.html
@@ -1,5 +1,5 @@
 <div class="card flexbox desktop-only">
-    <div class="card-body image">
+    <div class="card-body image gap-5">
         <img class="flex-shrink" style="background-image: url('{{inputItem?.Image}}');" [src]="inputItem?.Image">
         <p class="center">{{inputItem?.Name}}</p>
         <div class="flex_container">
