--- a/src/app/linear-carousel/linear-carousel.component.html
+++ b/src/app/linear-carousel/linear-carousel.component.html
@@ -5,7 +5,7 @@
     @else
     {
     <div class="card postcard relative">
-        <h2 class="text-white text-xl font-semibold mb-2 align-center mt-5">{{ header }}</h2>
+        <h2 class="text-xl font-semibold mb-2 align-center mt-5">{{ header }}</h2>
 
         <div class="card-body sub_container relative items-center justify-center">
             <!-- Left Button -->
