--- a/src/app/pages/libro/libro.component.html
+++ b/src/app/pages/libro/libro.component.html
@@ -26,12 +26,24 @@
         </h1>
         <div class="divider"></div>
 
-        <button class="btn btn-outline-primary flex-grow">
-            <fa-icon [icon]="storeIcon"></fa-icon>&nbsp;Comprar
-        </button>
-        <button class="btn btn-outline-success flex-grow">
-            <fa-icon [icon]="shoppingCartIcon"></fa-icon>&nbsp;Añadir al carrito
-        </button>
+        @if(libro.Stock > 0)
+        {
+            <button class="btn btn-outline-primary flex-grow">
+                <fa-icon [icon]="storeIcon"></fa-icon>&nbsp;Comprar
+            </button>
+            <button class="btn btn-outline-success flex-grow">
+                <fa-icon [icon]="shoppingCartIcon"></fa-icon>&nbsp;Añadir al carrito
+            </button>
+        }
+        @else
+        {
+            <button class="btn btn-outline-error flex-grow">
+                <fa-icon [icon]="storeIcon"></fa-icon>&nbsp;Fuera de stock
+            </button>
+            <button class="btn btn-outline-error flex-grow">
+                <fa-icon [icon]="shoppingCartIcon"></fa-icon>&nbsp;Fuera de stock
+            </button>
+        }
         <button class="btn btn-outline-error flex-grow">
             <fa-icon [icon]="wishListIcon"></fa-icon>&nbsp;Añadir a favoritos
         </button>
