--- a/src/app/components/admin/tables/books/book-table/book-table.component.html
+++ b/src/app/components/admin/tables/books/book-table/book-table.component.html
@@ -25,11 +25,11 @@
             <tr>
                 <td>{{item.ISBN}}</td>
                 <td>{{item.Name}}</td>
-                <td class="tooltip tooltip-top" data-tooltip="author name">
+                <td class="tooltip tooltip-top" [attr.data-tooltip]="">
                     {{item.Author}}
                 </td>
 
-                <td class="tooltip tooltip-top" data-tooltip="publisher name">
+                <td class="tooltip tooltip-top" [attr.data-tooltip]="">
                     {{item.Publisher}}
                 </td>
                 <td>{{item.Image}}</td>
@@ -38,7 +38,9 @@
                     <td>{{item.LaunchDate.toDateString()}}</td>
                 }
                 <td>{{item.Price}}</td>
-                <td><button class="btn btn-outline-error">Delete</button></td>
+                <td><textarea readonly>{{item.Synopsis}}</textarea></td>
+                <td>{{item.Stock}}</td>
+                <td><button class="btn btn-outline-error" (click)="onDeleteFunc(item);">Delete</button></td>
                 <td><button class="btn btn-outline-success" (click)="onEditFunc(item);">Edit</button></td>
             </tr>
             }
