--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="card flex desktop-only">
-    <input [(ngModel)]="inputText" class="input-ghost-primary input input-solid flex-component-bg" placeholder="Buscar" />
+    <input [(ngModel)]="inputText" class="input-ghost-primary input input-solid flex-component-bg" placeholder="Buscar libro por" />
     <select [(ngModel)]="selectFilter" class="select select-ghost-primary select-solid flex-component">
         <option>Nombre</option>
         <option>Autor</option>
