--- a/src/app/components/filter/libro-entry/libro-entry.component.html
+++ b/src/app/components/filter/libro-entry/libro-entry.component.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="divider-horizontal"></div>
-            <div class="btn-group btn-group-rounded btn-group-scrollable">
+            <div class="btn-group btn-group-rounded btn-group-scrollable object-bottom">
                 <button class="btn btn-primary" [routerLink]="['/book', libro?.ISBN]">Ver Ahora</button>
                 <button class="btn btn-error">Añadir a favoritos</button>
                 <button class="btn btn-error">Añadir a una estanteria</button>
