Checkout cart page and cart controller

--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -249,6 +249,10 @@
 				<app-log-form
 					class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-log-form>
 				}
+				@case(7)
+				{
+					<app-category-form class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-category-form>
+				}
 				@default
 				{
 				<div
