--- a/src/app/components/filter/libro-entry/libro-entry.component.html
+++ b/src/app/components/filter/libro-entry/libro-entry.component.html
@@ -10,7 +10,7 @@
                     <p class="text-content2">{{getTrimmedSynopsis()}}</p>
                 </div>
             </div>
-            <div class="divider-horizontal"></div>
+            <div class="divider"></div>
             <div class="btn-group btn-group-rounded btn-group-scrollable object-bottom">
                 <button class="btn btn-primary" [routerLink]="['/book', libro?.ISBN]">Ver Ahora</button>
                 <button class="btn btn-error">Añadir a favoritos</button>
