--- a/src/app/components/popups/error-popup/error-popup.component.html
+++ b/src/app/components/popups/error-popup/error-popup.component.html
@@ -7,7 +7,7 @@
 		<h2 class="text-xl">{{popupTitle + error?.error_code}}</h2>
 		<span>{{error?.message}}</span>
 		<div class="flex gap-3">
-			<button class="btn btn-block" for="modal-1" (click)="hidePopup();">Close</button>
+			<button class="btn btn-block hover:btn-error" for="modal-1" (click)="hidePopup();">Close</button>
 		</div>
 	</div>
 </div>
