--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -7,6 +7,7 @@
 	</div>
 	<div class="navbar-end gap-5">
 		<app-theme-selector></app-theme-selector>
+		<app-cart></app-cart>
 		@if (!loggedIn)
 		{
 		<a class="navbar-item" routerLink="/login">Login</a>
